move animation into sass and improve, fix checkbox vertical alignmet

--- a/less/resets.less
+++ b/less/resets.less
@@ -212,14 +212,6 @@ input[type="submit"]:active {
 	box-shadow: inset 0 2px 3px rgba(0,0,0,.15);
 	box-shadow: inset 0 2px 2px rgba(0,0,0,.15);
 }
-input[type="checkbox"],
-input[type="radio"] {
-	box-sizing: border-box; /* Addresses box sizing set to content-box in IE8/9 */
-	padding: 0; /* Addresses excess padding in IE8/9 */
-	width:32px !important;
-	height:32px;
-	vertical-align: baseline;
-}
 input[type="search"] {
 	-webkit-appearance: textfield; /* Addresses appearance set to searchfield in S5, Chrome */
 	-moz-box-sizing: content-box;
